# services/transaction-service/cmd/transaction-service/main.go
@@ -32,6 +32,9 @@ import (
 // @title Transaction Service API
 // @version 1.0
 // @description Transaction service API documentation.
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 // @BasePath /
 func main() {
 	cfg, err := config.Load()
@@ -71,7 +74,7 @@ func main() {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	observability.SetServiceUp(cfg.ServiceName)
 	h := delivery.NewHandler(txUC)
-	h.RegisterRoutes(r)
+	h.RegisterRoutes(r, cfg.JWTAccessSecret)
 
 	server := &http.Server{
 		Addr:    ":" + cfg.HTTPPort,
